--- a/styles/FAQ.css
+++ b/styles/FAQ.css
@@ -49,7 +49,7 @@
 }
 .faq-reply{
     overflow: hidden;
-    margin: 0 0 30px 0;
+    margin: 0 0 50px 0;
 }
 .faq-reply dt{
     float: left;
@@ -65,7 +65,9 @@
 .faq-reply dd p{
     margin: 0 0 20px 0;
 }
-
+.faq-reply dd p:last-child{
+    margin: 0;
+}
 
 
 
