--- a/styles/main.css
+++ b/styles/main.css
@@ -193,18 +193,18 @@ header .add-dream:before {
     margin-left: -130px;
     background: url(../images/bg_add_dream.png) no-repeat;
 }
-.social {
+header .social {
     float: right;
     overflow: hidden;
 }
-.social li {
+header .social li {
     float: left;
 }
-.social li a {
+header .social li a {
     display: block;
     height: 75px;
 }
-.social li span {
+header .social li span {
     padding-top: 25px;
     color: #464646;
     height: 100%;
@@ -689,10 +689,14 @@ footer .social li {
     float: left;
 }
 footer .social li a {
+    display: block;
     height: 40px;
 }
 footer .social li span {
+    height: 100%;
+    width: 40px;
     padding-top: 10px;
+    color: #464646;
 }
 .developers li {
     margin-bottom: 10px;
@@ -714,4 +718,61 @@ footer .social li span {
 .developers .dev:hover,
 .developers .designer:hover {
     opacity: 1;
+}
+
+/*-------------------------------------POPUPS---------------------------------------*/
+.popup-login,
+.popup-willview,
+.popup-thanks {
+    display: none;
+}
+.popup {
+    width: 100%;
+    min-height: 100%;
+    background: rgba(233,233,233,.7);
+    position: fixed;
+    top: 0;
+    text-align: center;
+    overflow: hidden;
+}
+.popup-content {
+    position: relative;
+    height: 290px;
+    width: 560px;
+    margin: 200px auto 0;
+    padding: 200px 100px 0;
+    font-size: 23px;
+    background-color: #fff;
+    box-shadow: 0 2px 50px rgba(0,0,0,.23);
+}
+.popup-content .close span {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: 20px;
+}
+.popup-content .close span:hover {
+    color: #464646;
+}
+.popup-login .popup-content {
+    background: #fff url(../images/popup-login.png) no-repeat center 70px;
+}
+.popup-login .popup-content .social {
+    margin: 10px auto;
+    text-align: center;
+}
+.popup-login .popup-content .social li {
+    display: inline-block;
+}
+.popup-login .social span {
+    width: 40px;
+    height: 40px;
+    padding-top: 10px;
+    color: #464646;
+}
+.popup-willview .popup-content {
+    background: #fff url(../images/popup-willview.png) no-repeat center 50px;
+}
+.popup-thanks .popup-content {
+    background: #fff url(../images/popup-thanks.png) no-repeat center 70px;
 }
