--- a/styles/user-profile-edit.css
+++ b/styles/user-profile-edit.css
@@ -41,51 +41,44 @@
     color: #37acb1;
 }
 .content-user-data li{
-    margin: 0 0 9px 0;   
+    margin: 0 0 10px 0;   
 }
 .aside-user-data input,
 .content-user-data input[type="text"]{
     width: 100%;
-    padding: 7px 0 8px 5px;
+    padding: 10px 0 10px 5px;
     color: #464646;
 }
-.content-user-data select{
-    margin: 0 3px 11px 0;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    -ms-appearance: none;
-    appearance: none!important;
+.content-user-data .birthday{
+    margin: 0 0 22px 0;
+}
+.content-user-data .day{
+    width: 80px;
+    padding: 8px 20px 9px 0;
     background: url(../images/arrow-bottom-select.png) no-repeat;
+    background-position: 60px center;
     font-size: 16px;
-	color: #464646; 
+	color: gray;
 }
-.content-user-data .birthday-month{
+.content-user-data .month{
     width: 135px;
-    padding: 7px 0 8px 30px;
+    padding: 8px 20px 9px 0;
+    background: url(../images/arrow-bottom-select.png) no-repeat;
     background-position: 117px center;
+    font-size: 16px;
+	color: gray;
 }
-.content-user-data .birthday-day{
+.content-user-data .year{
     width: 80px;
-    padding: 7px 0 8px 12px;
+    padding: 8px 0 9px 0;
+    background: url(../images/arrow-bottom-select.png) no-repeat;
     background-position: 60px center;
+    font-size: 16px;
+	color: gray;
 }
-.content-user-data .birthday-year{
-    width: 80px;
-    padding: 7px 0 8px 14px;
-    background-position: 60px center;
-}
-.content-user-data .disable-sel{
-    display: none;
-}
-select::-ms-expand {
-  display: none;
-}
-.content-user-data select option { 
-    padding: 6px !inportant;
-}
-.content-user-data .about-user{
+.content-user-data .about-user textarea{
     width: 100%;
-    height: 482px;
+    height: 486px;
     resize: none;
     margin: 0 0 30px 0;
     padding: 5px;
@@ -94,26 +87,27 @@ select::-ms-expand {
     display: block;
     width: 280px;
     margin: 0 0 30px 0;
-    background: rgb(97,233,161); /* Old browsers */
-    background: -moz-linear-gradient(top,  rgba(97,233,161,1) 0%, rgba(73,182,192,1) 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(97,233,161,1)), color-stop(100%,rgba(73,182,192,1))); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top,  rgba(97,233,161,1) 0%,rgba(73,182,192,1) 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top,  rgba(97,233,161,1) 0%,rgba(73,182,192,1) 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top,  rgba(97,233,161,1) 0%,rgba(73,182,192,1) 100%); /* IE10+ */
-    background: linear-gradient(to bottom,  rgba(97,233,161,1) 0%,rgba(73,182,192,1) 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#61e9a1', endColorstr='#49b6c0',GradientType=0 ); /* IE6-9 */
     font: 20px 'DaxPro-Bold';
     color: #fff;
-    padding: 7px 0;
+    padding: 6px 0 11px 0;
 }
-.content-user-data input[type="submit"]:hover {
-    background: rgb(151,232,163);
-    background: -moz-linear-gradient(top,  rgb(151,232,163) 0%, rgb(117,181,190) 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(151,232,163)), color-stop(100%,rgb(117,181,190)));
-    background: -webkit-linear-gradient(top,  rgb(151,232,163) 0%,rgb(117,181,190) 100%);
-    background: -o-linear-gradient(top,  rgb(151,232,163) 0%,rgb(117,181,190) 100%);
-    background: -ms-linear-gradient(top,  rgb(151,232,163) 0%,rgb(117,181,190) 100%);
-    background: linear-gradient(to bottom,  rgb(151,232,163) 0%,rgb(117,181,190) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#97e8a3', endColorstr='#75b5be',GradientType=0 );
-    box-shadow: 0 1px 1px -1px rgba(0,0,0,.3);
+
+.aside-user-data .social {
+    overflow: hidden;
+    text-align: center;
+}
+.aside-user-data .social li {
+    display: inline-block;
+}
+.aside-user-data .social li a {
+    display: block;
+}
+.aside-user-data .social li span {
+    padding-top: 10px;
+    color: #464646;
+    height: 40px;
+    width: 40px;
+}
+.social li span:hover {
+    color: #fff;
 }
