--- a/templates/faq.html
+++ b/templates/faq.html
@@ -10,62 +10,7 @@
 
 <body>
 <div class="wrapper">
-    <header>
-        <p><a class="logo" href="index.html"><img src="images/logo.png" alt="Черкаська мрія">Черкаська мрія</a></p>
-        <nav>
-            <ul class="main-menu">
-                <li><a href="FAQ.html">FAQ</a></li>
-                <li><a href="contacts.html">Контакти</a></li>
-            </ul>
-        </nav>
-        <div class="search">
-            <form action="#" method="post">
-                <input type="submit" value="">
-                <input type="text" name="search_text" class="search-field" placeholder="Geekstarte">
-            </form>
-            <a class="search-link" href="#">Пошук</a>
-        </div>
-        <ul class="social">
-            <li>
-                <a href="#"><span class="ico-fb"></span></a>
-            </li>
-            <li>
-                <a href="#"><span class="ico-vk"></span></a>
-            </li>
-            <li>
-                <a href="#"><span class="ico-gplus"></span></a>
-            </li>
-            <li>
-                <a href="#"><span class="ico-tw"></span></a>
-            </li>
-        </ul>
-        <span class="social-title">Увійти через</span>
-        <ul class="account-bar">
-            <li>
-                <a class="user-photo" href="#"><img src="images/user-photo.jpg" alt="User photo"></a>
-            </li>
-            <li>
-                <a class="profile" href="#">profile</a>
-            </li>
-            <li>
-                <a class="user-msg" href="#">messages</a>
-            </li>
-            <li class="show-dreams">
-                <a class="user-dreams" href="#">user dreams</a>
-                <ul class="user-dreams-list empty-list">
-                    <li class="dream-item"><a href="#">Мрія 1</a></li>
-                    <li class="dream-item"><a href="#">Мрія 2</a></li>
-                    <li class="dream-item"><a href="#">Мрія 3</a></li>
-                    <li class="close-block"><a href="#" class="close"><span class="ico-cancel"></span></a></li>
-                    <li class="no-user-dreams"><p>Ви не додали жодної мрії</p></li>
-                </ul>
-            </li>
-            <li>
-                <a class="logout" href="#">logout</a>
-            </li>
-        </ul>
-        <a class="add-dream" href="#">Додати мрію</a>
-    </header>
+    <div ui-view="header"></div>
 
     <div class="bg-pages faq-page">
         <h1 class="faq-page-title">Регламент та поради</h1>
@@ -96,48 +41,7 @@
         </section>
     </div>
 
-    <footer>
-        <ul class="footer-info">
-            <li>
-                <span class="copy">&copy; 2012 Черкаська мрія</span>
-            </li>
-            <li>
-                <ul class="links">
-                    <li><a href="#">Регламент та поради</a></li>
-                    <li><a href="#">Контакти</a></li>
-                </ul>
-            </li>
-            <li>
-                <span>Слідкуйте за нами</span>
-                <ul class="social">
-                    <li>
-                        <a href="#"><span class="ico-fb"></span></a>
-                    </li>
-                    <li>
-                        <a href="#"><span class="ico-vk"></span></a>
-                    </li>
-                    <li>
-                        <a href="#"><span class="ico-gplus"></span></a>
-                    </li>
-                    <li>
-                        <a href="#"><span class="ico-tw"></span></a>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <ul class="developers">
-                    <li>
-                        <span class="title">Розробка:</span>
-                        <a class="dev" href="#"><img src="images/ico_gh_hov.png" alt="GeekHub"></a>
-                    </li>
-                    <li>
-                        <span class="title">Дизайн:</span>
-                        <a class="designer" href="#"><img src="images/ico_sergium_hov.png" alt="Sergium"></a>
-                    </li>
-                </ul>
-            </li>
-        </ul>
-    </footer>
+    <div ui-view="footer"></div>
 </div>
 </body>
 </html>
